Adjust buttons slightly to the left to avoid wrapping on Safari

--- a/model-6/model-6.css
+++ b/model-6/model-6.css
@@ -47,5 +47,5 @@ td {
 #buttons {
   position: absolute;
   top: 328px;
-  left: 250px;
+  left: 238px;
 }
